--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Andrea Serrato</title>
 </head>
 <body>
+        <h1>Andrea Serrato Vazquez</h1>
+        <img src="img/Adoro a fanarts de Sailor Moon ❤.jpg">
         <div class="content">
-            <h1>Andrea Serrato Vazquez</h1>
-            <h4>About me</h4><p>This is the story of....</p>
+                    <h2>Resume</h2><p>This is the story of....</p>
+           
         </div>
+  
 </body>
 </html>
