--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Andrea Serrato</title>
 </head>
 <body>
-        <h1>Andrea Serrato Vazquez</h1>
-        <img src="img/Adoro a fanarts de Sailor Moon ❤.jpg">
+        <div id="container">
         <div class="content">
+            <h1>Andrea Serrato Vazquez</h1>
+        <img src="img/picture.jpg">
                     <h2>Resume</h2><p>This is the story of....</p>
            
         </div>
-  
+    </div>
 </body>
 </html>
