--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div id="container-about">
-                    <h3>ABOUT ME</h3>
+                    <h3>SKILLS PAGE</h3>
                     <p>Creative and hardworking ITD’s Computer Systems Engineering student. Android app developer specialist. Coworking on team projects. Interest in photography, graphic design and code. </p>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="container-button" style="display:inline-block; width:100%; text-align: center; background-color: pink; display: inline-block;">
-                <button type="button" class="btn btn-primary" onclick="parent.location='skills.html'" >SKILLS</button>
+                <button type="button" class="btn btn-primary"  onclick="parent.location='index.html'">HOME</button>
                 <button type="button" class="btn btn-primary "  >Full-Width Button</button>
             </div>
         </div>
