--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <title>Andrea Serrato CV</title>
 </head>
 <body>
-        <div id="container">
+        <div id="container" class="row">
         <div class="content">
-            <div id="title-div">
-                <h1>Andrea Serrato Vázquez</h1>
-                <p><i class="fa fa-laptop" aria-hidden="true"></i> Web Developer Junior / Android App Developer Junior <i class="fa fa-android" aria-hidden="true"></i></p>
-                <p><strong>Trainee candidate</strong></p>
+            <div id="title-div" class="row">
+                <div>
+                    <h1>Andrea Serrato Vázquez</h1>
+                </div>
+                <div>
+                    <p><i class="fa fa-laptop" aria-hidden="true"></i> Web Developer Junior / Android App Developer Junior <i class="fa fa-android" aria-hidden="true"></i></p>
+                </div>
             </div>
             <div id="info-principal">
                 <div id="container-img">
