--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 </div>
             </div>
             <div class="container wk-exp">
-            <h2>+ PARTICIPATION</h2>
+            <h2>+ PARTICIPATION AT</h2>
                 <div class="content-data">
                     <div class="container">
                         <div class="row">
